<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
            android:background="@color/colorAccentBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="LabelFor">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/my_home"
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_back"
                app:titleTextColor="@color/colorPrimaryDark"/>

        <ScrollView
                android:background="@color/colorTransparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:clipToPadding="true"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                    android:background="@color/colorTransparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_marginTop="12dp"
                        android:background="@color/colorTransparent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:background="@color/colorTransparent"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/is_home"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="24sp"/>

                    <ImageView
                            android:id="@+id/icon_is_home_status"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center"
                            android:layout_margin="12dp"
                            android:src="@drawable/bg_is_home_status"/>

                </LinearLayout>

                <android.support.v7.widget.CardView
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:background="@color/colorWhite"
                            android:padding="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <TextView
                                android:background="@color/colorWhite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_location"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="24sp"
                                android:textStyle="bold"/>

                        <LinearLayout
                                android:background="@color/colorWhite"
                                android:layout_marginTop="12dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:baselineAligned="false">

                            <LinearLayout
                                    android:background="@color/colorWhite"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                <TextView
                                        android:background="@color/colorWhite"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="16sp"
                                        android:padding="8dp"
                                        android:text="@string/home_latitude"/>

                                <EditText
                                        android:layout_width="match_parent"
                                        android:id="@+id/input_latitude"
                                        android:inputType="numberDecimal"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginEnd="8dp"
                                        android:layout_height="wrap_content"
                                        tools:text="3.14567"
                                        android:padding="8dp"
                                        android:lines="1"
                                        android:background="@drawable/bg_edittext"
                                        android:autofillHints=""
                                        />
                            </LinearLayout>

                            <LinearLayout
                                    android:background="@color/colorWhite"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                <TextView
                                        android:background="@color/colorWhite"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="16sp"
                                        android:padding="8dp"
                                        android:text="@string/home_longitude"/>

                                <EditText
                                        android:layout_width="match_parent"
                                        android:id="@+id/input_longitude"
                                        android:inputType="numberDecimal"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginEnd="8dp"
                                        android:layout_height="wrap_content"
                                        tools:text="3.14567"
                                        android:padding="8dp"
                                        android:lines="1"
                                        android:background="@drawable/bg_edittext"
                                        android:autofillHints=""/>
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                                android:layout_marginTop="12dp"
                                android:background="@color/colorWhite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:padding="8dp"
                                android:text="@string/entry_radius"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:id="@+id/input_entry_radius"
                                android:lines="1"
                                android:inputType="number"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_height="wrap_content"
                                tools:text="3"
                                android:padding="8dp"
                                android:background="@drawable/bg_edittext"
                                android:autofillHints=""/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:background="@color/colorWhite"
                            android:padding="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:background="@color/colorWhite"
                                android:layout_height="wrap_content"
                                android:text="@string/home_network"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="24sp"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:background="@color/colorWhite"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:layout_marginTop="12dp"
                                android:padding="8dp"
                                android:text="@string/home_wifi_ssid"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:id="@+id/input_wifi_ssid"
                                android:lines="1"
                                android:inputType="text"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_height="wrap_content"
                                tools:text="MyHomeWiFi-5G"
                                android:padding="8dp"
                                android:background="@drawable/bg_edittext"
                                android:autofillHints=""/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                <Button
                        android:id="@+id/button_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_margin="16dp"
                        android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>